add spring/ hibernate example